{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 215,
  "lineage": "e151d3f1-f5a2-653f-a852-fafc183ebd2a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_eip",
      "name": "by_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-066408ab5d9a9b781",
            "public_dns": "ec2-3-105-102-108.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.105.102.108",
            "public_ipv4_pool": "amazon"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myprac-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-030a8d0e06463671c",
            "arn": "arn:aws:ec2:ap-southeast-2:327746137438:instance/i-03f8e25f02463aa23",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03f8e25f02463aa23",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "0906-tfprac-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06e2b08757cceb2f7",
            "private_dns": "ip-10-0-10-224.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.224",
            "public_dns": "ec2-13-211-122-152.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.211.122.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01ea6904da1e5c327",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0790f8a8982167b9a",
            "tags": {
              "Name": "prac-server",
              "Project": "prac"
            },
            "tags_all": {
              "Name": "prac-server",
              "Project": "prac"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04aa8f2e136b444ae"
            ]
          },
          "dependencies": [
            "aws_security_group.myprac-sg",
            "aws_subnet.myprac-subnet-1",
            "aws_vpc.myprac-vpc",
            "data.aws_ami.latest-amazon-linux-image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myprac-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:327746137438:internet-gateway/igw-0607deff3022ddc46",
            "id": "igw-0607deff3022ddc46",
            "owner_id": "327746137438",
            "tags": {
              "Name": "prac-igw",
              "Project": "prac"
            },
            "tags_all": {
              "Name": "prac-igw",
              "Project": "prac"
            },
            "vpc_id": "vpc-062043510f6630e4f"
          },
          "dependencies": [
            "aws_vpc.myprac-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myprac-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:327746137438:route-table/rtb-0644ab1f537561d22",
            "id": "rtb-0644ab1f537561d22",
            "owner_id": "327746137438",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0607deff3022ddc46",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prac-rtb",
              "Project": "prac"
            },
            "tags_all": {
              "Name": "prac-rtb",
              "Project": "prac"
            },
            "timeouts": null,
            "vpc_id": "vpc-062043510f6630e4f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myprac-igw",
            "aws_vpc.myprac-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate-rtb-subent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0082c753e23d4d362",
            "route_table_id": "rtb-0644ab1f537561d22",
            "subnet_id": "subnet-0790f8a8982167b9a"
          },
          "dependencies": [
            "aws_internet_gateway.myprac-igw",
            "aws_route_table.myprac-route-table",
            "aws_subnet.myprac-subnet-1",
            "aws_vpc.myprac-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myprac-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:327746137438:security-group/sg-04aa8f2e136b444ae",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04aa8f2e136b444ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "myprac-sg",
            "name_prefix": "",
            "owner_id": "327746137438",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prac-sg",
              "Project": "prac"
            },
            "tags_all": {
              "Name": "prac-sg",
              "Project": "prac"
            },
            "timeouts": null,
            "vpc_id": "vpc-062043510f6630e4f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myprac-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myprac-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:327746137438:subnet/subnet-0790f8a8982167b9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0790f8a8982167b9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "327746137438",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prac-subnet-1",
              "Project": "prac"
            },
            "tags_all": {
              "Name": "prac-subnet-1",
              "Project": "prac"
            },
            "vpc_id": "vpc-062043510f6630e4f"
          },
          "dependencies": [
            "aws_vpc.myprac-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myprac-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:327746137438:vpc/vpc-062043510f6630e4f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04c8ca5d83eda8e68",
            "default_route_table_id": "rtb-04088f8a2cc8e22e6",
            "default_security_group_id": "sg-000be531d6b8d56bf",
            "dhcp_options_id": "dopt-0581e842ede5dd7f0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-062043510f6630e4f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04088f8a2cc8e22e6",
            "owner_id": "327746137438",
            "tags": {
              "Name": "prac-vpc",
              "Project": "prac"
            },
            "tags_all": {
              "Name": "prac-vpc",
              "Project": "prac"
            }
          }
        }
      ]
    }
  ]
}